# Thermal-FEA-Engine

./: CMakeLists.txt  README.md  choices.md
.github/workflows/: ci.yml
include/thermal_fea/linalg/: Matrix.hpp  Vector.hpp
include/thermal_fea/mesh/: Element.hpp  Mesh.h  Mesh.hpp  Node.h  Node.hpp
include/thermal_fea/physics/: heat_equation.cpp  heat_equation.hpp
include/thermal_fea/solver/: assembly.hpp  conjugate_gradient.cpp  conjugate_gradient.hpp
src/: main.cpp
src/linalg/: Matrix.cpp  Vector.cpp
src/mesh/: Mesh.cpp
src/physics/: heat_equation.cpp
src/solver/: assembly.cpp  conjugate_gradient.cpp
tests/: CMakeLists.txt  test_linalg.cpp  test_linalg_matrix.cpp  test_linalg_vector.cpp  test_perf.cpp  test_solver.cpp
